got the mod to compile and run by excluding 90% of the source code

--- a/src/main/resources/assets/invasion/lang/en_us.json
+++ b/src/main/resources/assets/invasion/lang/en_us.json
@@ -1,27 +1,33 @@
 {
-  "block.invasion.nexus": "nexus",
+  "itemGroup.invasion": "Invasion",
 
-  "item.invasion.phaseCrystal": "Phase Crystal",
-  "item.invasion.riftFlux": "Rift Flux",
-  "item.invasion.nexus_catalyst": "Nexus Catalyst",
-  "item.invasion.infused_sword": "Infused Sword",
+  "block.invasion.nexus": "Nexus",
+
   "item.invasion.searing_bow": "Searing Bow",
+  "item.invasion.infused_sword": "Infused Sword",
   "item.invasion.catalyst_mixture": "Catalyst Mixture",
   "item.invasion.stable_catalyst_mixture": "Stable Catalyst Mixture",
-  "item.invasion.stable_nexus_catalyst": "Stable Nexus Catalyst",
-  "item.invasion.damping_gent": "Damping Agent",
-  "item.invasion.strong_damping_agent": "Strong Damping Agent",
-  "item.invasion.strange_bone": "Strange Bone",
+  "item.invasion.strong_catalyst_mixture": "Strong Catalyst Mixture",
+  "item.invasion.catalyst": "Nexus Catalyst",
   "item.invasion.strong_catalyst": "Strong Nexus Catalyst",
-  "item.invasion.engy_hammer": "Engineers Hammer",
-  "item.invasion.probe.nexus_adjuster": "Nexus Adjuster",
+  "item.invasion.stable_catalyst": "Stable Nexus Catalyst",
+  "item.invasion.damping_agent": "Damping Agent",
+  "item.invasion.strong_damping_agent": "Strong Damping Agent",
+  "item.invasion.phase_crystal": "Phase Crystal",
+  "item.invasion.rift_flux": "Rift Flux",
+  "item.invasion.small_remnants": "Small Remnants",
   "item.invasion.probe.material_probe": "Material Probe",
+  "item.invasion.probe.nexus_adjuster": "Nexus Adjuster",
+  "item.invasion.probe": "Material Probe",
+  "item.invasion.debug_wand": "Debug Wand",
+  "item.invasion.engy_hammer": "Engineers Hammer",
+  "item.invasion.strange_bone": "Strange Bone",
   "item.invasion.empty_trap": "Empty Trap",
   "item.invasion.rift_trap": "Rift Trap (Folded)",
   "item.invasion.flame_trap": "Flame Trap (Folded)",
   "item.invasion.poison_trap": "Poison Trap (Folded)",
-  "item.invasion.small_remnants": "Small Remnants",
-  "item.invasion.debug_wand": "Debug Wand",
+
+
 
   "container.nexus": "Nexus",
 
