Added Black Arrow Item

--- a/src/main/resources/assets/invasion/lang/en_us.json
+++ b/src/main/resources/assets/invasion/lang/en_us.json
@@ -5,6 +5,7 @@
 
   "item.invasion.searing_bow": "Searing Bow",
   "item.invasion.infused_sword": "Infused Sword",
+  "item.invasion.black_arrow": "Black Arrow",
   "item.invasion.catalyst_mixture": "Catalyst Mixture",
   "item.invasion.stable_catalyst_mixture": "Stable Catalyst Mixture",
   "item.invasion.strong_catalyst_mixture": "Strong Catalyst Mixture",
