--- a/src/main/resources/assets/invasion/lang/de_de.json
+++ b/src/main/resources/assets/invasion/lang/de_de.json
@@ -17,8 +17,7 @@
     "item.invasion.phase_crystal": "Phasenkristall",
     "item.invasion.rift_flux": "Riftflux",
     "item.invasion.small_remnants": "Kleine Überreste",
-    "item.invasion.probe.material_probe": "Materialsonde",
-    "item.invasion.probe.nexus_adjuster": "Nexusanpasser",
+    "item.invasion.nexus_adjuster": "Nexusanpasser",
     "item.invasion.probe": "Materialsonde",
     "item.invasion.debug_wand": "Debugstab",
     "item.invasion.engy_hammer": "Ingenieurshammer",
@@ -42,10 +41,12 @@
     "message.nexus.destroyed": "Der Nexus ist zerstört!",
     "message.nexus.damaged": "Der Nexus ist schwer beschädigt!",
     "message.nexus.dusk": "Die Nacht bricht um den Nexus ein...",
+    "message.nexus.range_changed": "Der Spawnradius wurde auf %s Blöcke gesetzt",
     "message.wave.complete": "Welle %s ist fast vorbei!",
     "message.wave.begin": "Welle %s fängt gleich an",
     "message.wave.first": "Die erste Welle kommt bald!",
     "message.invasion.end": "Hauptwelle vorbei",
-    "message.invasion.bind_player": "%s Leben ist an den Nexus gebunden",
-    "message.invasion.bind_you": "Dein Leben ist an den Nexus gebunden!"
+    "message.invasion.bind_player": "%s' Leben ist nun an den Nexus gebunden",
+    "message.invasion.bind_you": "Dein Leben ist nun an den Nexus gebunden!",
+    "message.block_strength": "Blockhärte: %s"
   }
